--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-<title>チーム紹介</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h1>チームメンバー紹介</h1>
-<h1>安河内彰人:最近は葬送のフリーレンをまた観てるぞ！</h1>
-<ul>
-<li>生野：好きな食べ物はカレー</li>
-<!-- メンバー紹介をここに追加 -->
- <li>松下:趣味は運動</li>
-    <li>宮田風音 趣味はゲームです</li>
-    <li>松本　侑晟　野球が好きです。</li>
-</ul>
+    <p>mainブランチ</p>
+    <p>mainブランチの変更</p>
 </body>
 </html>
